--- a/GarrisonButler.csproj
+++ b/GarrisonButler.csproj
@@ -43,10 +43,10 @@
     <Compile Include="Coroutines\Coroutine.Mission.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Coroutines\Coroutine.Move.cs" />
     <Compile Include="Objects\Building.cs" />
-    <Compile Include="Coroutine.cs" />
+    <Compile Include="Coroutines\Coroutine.cs" />
     <Compile Include="Objects\Follower.cs" />
-    <Compile Include="GarrisonLua.cs" />
     <Compile Include="GarrisonButler.cs" />
     <Compile Include="Objects\Mission.cs" />
   </ItemGroup>
