--- a/GarrisonButler.csproj
+++ b/GarrisonButler.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{1441053B-4D09-45A3-9602-087A7F143AEE}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>GarrisonBuddy</RootNamespace>
-    <AssemblyName>GarrisonBuddy</AssemblyName>
+    <RootNamespace>GarrisonButler</RootNamespace>
+    <AssemblyName>GarrisonButler</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
