--- a/GarrisonBuddy.csproj
+++ b/GarrisonBuddy.csproj
@@ -49,7 +49,8 @@
     <Compile Include="Config\GaBSettings.cs" />
     <Compile Include="Coroutines\Buildings\Coroutine.Buildings.Shipments.cs" />
     <Compile Include="Coroutines\Buildings\Coroutine.Buildings.Cache.cs" />
-    <Compile Include="Coroutines\Coroutine.Guarden.cs" />
+    <Compile Include="Coroutines\Coroutine.Professions.cs" />
+    <Compile Include="Coroutines\Coroutine.Garden.cs" />
     <Compile Include="Coroutines\Coroutine.Mine.cs" />
     <Compile Include="Coroutines\Coroutine.Move.data.cs" />
     <Compile Include="Coroutines\Buildings\Coroutine.Buildings.cs" />
