--- a/GarrisonButler.csproj
+++ b/GarrisonButler.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Libraries\HeapPriorityQueue.cs" />
     <Compile Include="Libraries\IPriorityQueue.cs" />
     <Compile Include="Libraries\ModuleVersion.cs" />
+    <Compile Include="Libraries\ObjectDumper.cs" />
     <Compile Include="Libraries\PriorityQueueNode.cs" />
     <Compile Include="Objects\Building.cs" />
     <Compile Include="Coroutines\Coroutine.cs" />
