--- a/GarrisonButler.csproj
+++ b/GarrisonButler.csproj
@@ -48,12 +48,15 @@
     </Compile>
     <Compile Include="Config\GaBSettings.Building.cs" />
     <Compile Include="Config\GaBSettings.cs" />
+    <Compile Include="Config\MailingTab.cs" />
+    <Compile Include="Coroutines\ActionHelpers.cs" />
     <Compile Include="Coroutines\Buildings\Coroutine.Buildings.Shipments.cs" />
     <Compile Include="Coroutines\Buildings\Coroutine.Buildings.Cache.cs" />
     <Compile Include="Coroutines\Buildings\Coroutine.Buildings.Salvage.cs" />
     <Compile Include="Coroutines\Coroutine.LastRound.cs" />
     <Compile Include="Coroutines\Coroutine.Dijkstra.cs" />
     <Compile Include="Coroutines\Coroutine.Move2.cs" />
+    <Compile Include="Coroutines\Coroutine.Mailing.cs" />
     <Compile Include="Coroutines\Coroutine.Waiting.cs" />
     <Compile Include="Coroutines\Buildings\Coroutine.Buildings.Harvest.cs" />
     <Compile Include="Coroutines\Coroutine.Professions.cs" />
@@ -76,6 +79,7 @@
     <Compile Include="Coroutines\Coroutine.cs" />
     <Compile Include="Objects\DailyProfession.cs" />
     <Compile Include="Objects\Follower.cs" />
+    <Compile Include="Objects\MailItem.cs" />
     <Compile Include="Objects\Mission.cs" />
   </ItemGroup>
   <ItemGroup>
