Fix bag full bug, speed up profession CD detection
- Fixed bug where Alert timer for full bags was getting called over and
over and over
- Added DiagnosticLogTimeTaken routine
- Added ToHashSet extension method
- Modified DailyProfession to hard code Profession Spell ID
- DailyProfession.HasSpell() will now use hard coded Profession Spell
IDs

--- a/GarrisonButler.csproj
+++ b/GarrisonButler.csproj
@@ -85,6 +85,7 @@
     <Compile Include="Libraries\ModuleVersion.cs" />
     <Compile Include="Libraries\ObjectDumper.cs" />
     <Compile Include="Libraries\PriorityQueueNode.cs" />
+    <Compile Include="Libraries\ToHashSetExtension.cs" />
     <Compile Include="Objects\Building.cs" />
     <Compile Include="Coroutines\Coroutine.cs" />
     <Compile Include="Objects\DailyProfession.cs" />
