--- a/GarrisonButler.csproj
+++ b/GarrisonButler.csproj
@@ -42,6 +42,7 @@
     <Compile Include="Config\OldSettings\GabSettings.cs" />
     <Compile Include="Config\OldSettings\MailCondition.cs" />
     <Compile Include="Config\OldSettings\MailItem.cs" />
+    <Compile Include="Libraries\ItemsExtensions.cs" />
     <Compile Include="Objects\SafeString.cs" />
     <None Include="App.config" />
     <Compile Include="API\GarrisonLua.Building.cs" />
@@ -142,6 +143,7 @@
   <ItemGroup>
     <EmbeddedResource Include="Config\ConfigForm.resx">
       <DependentUpon>ConfigForm.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Config\GarrisonButlerImages.resx">
       <Generator>ResXFileCodeGenerator</Generator>
