--- a/GarrisonButler.csproj
+++ b/GarrisonButler.csproj
@@ -37,6 +37,11 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Config\GarrisonButlerImages.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>GarrisonButlerImages.resx</DependentUpon>
+    </Compile>
     <Compile Include="Config\OldSettings\DailyProfession.cs" />
     <Compile Include="Config\OldSettings\GaBSettings.Building.cs" />
     <Compile Include="Config\OldSettings\GabSettings.cs" />
@@ -59,11 +64,6 @@
     </Compile>
     <Compile Include="Config\GaBSettings.Building.cs" />
     <Compile Include="Config\GaBSettings.cs" />
-    <Compile Include="Config\GarrisonButlerImages.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>GarrisonButlerImages.resx</DependentUpon>
-    </Compile>
     <Compile Include="Config\MailingTab.cs" />
     <Compile Include="Coroutines\ActionHelpers.cs" />
     <Compile Include="Coroutines\Buildings\Coroutine.Buildings.Shipments.cs" />
@@ -147,6 +147,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Config\GarrisonButlerImages.resx">
       <Generator>ResXFileCodeGenerator</Generator>
+      <SubType>Designer</SubType>
       <LastGenOutput>GarrisonButlerImages.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
