Pushed as beta 1.4.0.18 Modified the update/load settings to avoid erasing file.

--- a/GarrisonButler.csproj
+++ b/GarrisonButler.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Config\OldSettings\MailItem.cs" />
     <Compile Include="Libraries\ItemsExtensions.cs" />
     <Compile Include="Libraries\PlayerExtensions.cs" />
+    <Compile Include="Libraries\WoWObjectExtensions.cs" />
     <Compile Include="Objects\SafeString.cs" />
     <None Include="App.config" />
     <Compile Include="API\GarrisonLua.Building.cs" />
