--- a/GarrisonButler.csproj
+++ b/GarrisonButler.csproj
@@ -131,6 +131,7 @@
       <HintPath>..\..\System.Data.SQLite.dll</HintPath>
     </Reference>
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml" />
