Added fix for use of 0 in all rules of mailing system, it should now properly behave. Added fix for value superiror of max stack size for KeepInBag rule. Introduce ButlerLua which dynamicly limits the number of calls to Lua API and ensure no overload. Added new spliting action to ButlerLua. Added diag output to mailing system

--- a/GarrisonButler.csproj
+++ b/GarrisonButler.csproj
@@ -37,6 +37,7 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="API\ButlerLua.cs" />
     <Compile Include="Config\GarrisonButlerImages.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
