--- a/GarrisonButler.csproj
+++ b/GarrisonButler.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Config\OldSettings\MailCondition.cs" />
     <Compile Include="Config\OldSettings\MailItem.cs" />
     <Compile Include="Config\OldSettings\ModuleVersion.cs" />
+    <Compile Include="Config\TradingPostTab.cs" />
     <Compile Include="Libraries\EnumHelper.cs" />
     <Compile Include="Libraries\ItemsExtensions.cs" />
     <Compile Include="Libraries\PlayerExtensions.cs" />
