Added improvements to the node gathering routines by introducing a salesman algorithm applied on the 5 closest nodes only. Changed the value of the minimum distance to 5 (was 3) to allow more connections between nodes and more possible paths.

--- a/GarrisonButler.csproj
+++ b/GarrisonButler.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Libraries\EnumHelper.cs" />
     <Compile Include="Libraries\ItemsExtensions.cs" />
     <Compile Include="Libraries\PlayerExtensions.cs" />
+    <Compile Include="Libraries\Salesman.cs" />
     <Compile Include="LuaObjects\CapacitiveDisplayFrame.cs" />
     <Compile Include="Objects\BItem.cs" />
     <Compile Include="Objects\Pigment.cs" />
