Added back bunker to the initial loading of the mesh The path generation is now recursive and will blacklist the points used for the start/end if now path was found and will try again (max 50).

--- a/GarrisonButler.csproj
+++ b/GarrisonButler.csproj
@@ -93,6 +93,7 @@
     <Compile Include="Coroutines\Buildings\Coroutine.Buildings.cs" />
     <Compile Include="Coroutines\Followers\Coroutine.Mission.cs" />
     <Compile Include="Coroutines\Coroutine.Milling.cs" />
+    <None Include="ClassDiagram1.cd" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Coroutines\Coroutine.Move.cs" />
