Added fix for Archeo fragments Will now try to loot 3 times max and then blacklisting with our own blacklist.
https://www.pivotaltracker.com/story/show/85388772
[Finishes #85388772]

--- a/GarrisonButler.csproj
+++ b/GarrisonButler.csproj
@@ -56,8 +56,10 @@
     <Compile Include="Libraries\ItemsExtensions.cs" />
     <Compile Include="Libraries\PlayerExtensions.cs" />
     <Compile Include="Libraries\Salesman.cs" />
+    <Compile Include="LuaObjects\LuaEvents.cs" />
     <Compile Include="LuaObjects\CapacitiveDisplayFrame.cs" />
     <Compile Include="Objects\BItem.cs" />
+    <Compile Include="Objects\Blacklist.cs" />
     <Compile Include="Objects\MissionFollowerCombo.cs" />
     <Compile Include="Objects\Pigment.cs" />
     <Compile Include="Objects\SafeString.cs" />
