--- a/GarrisonButler.csproj
+++ b/GarrisonButler.csproj
@@ -51,6 +51,9 @@
     <Compile Include="Config\OldSettings\MailItem.cs" />
     <Compile Include="Config\OldSettings\ModuleVersion.cs" />
     <Compile Include="Config\TradingPostTab.cs" />
+    <Compile Include="GarrisonButler.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Libraries\EnumHelper.cs" />
     <Compile Include="Libraries\ItemsExtensions.cs" />
     <Compile Include="Libraries\PlayerExtensions.cs" />
@@ -95,7 +98,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Coroutines\Coroutine.Move.cs" />
-    <Compile Include="GarrisonButler.cs" />
     <Compile Include="Libraries\FreshDesk.cs" />
     <Compile Include="Libraries\HeapPriorityQueue.cs" />
     <Compile Include="Libraries\IPriorityQueue.cs" />
